# graphrefly-py

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  TRASH-FILES.md  llms.txt  pyproject.toml
.claude/skills/dev-dispatch/: SKILL.md
.claude/skills/parity/: SKILL.md
.claude/skills/qa/: SKILL.md
.gemini/skills/dev-dispatch/: SKILL.md
.gemini/skills/parity/: SKILL.md
.github/workflows/: docs-site.yml  pages.yml  release.yml
TRASH/: EmitStrategy.md  emit_with_batch.md
archive/docs/: DESIGN-ARCHIVE-INDEX.md  SESSION-cross-repo-implementation-audit.md  SESSION-demo-test-strategy.md  SESSION-graphrefly-spec-design.md  SESSION-serialization-memory-footprint.md  SESSION-tier2-parity-nonlocal-forward-inner.md  SESSION-universal-reduction-layer.md  design-archive-index.jsonl
archive/optimizations/: built-in-optimizations.jsonl  cross-language-notes.jsonl  parity-fixes.jsonl  qa-design-decisions.jsonl  resolved-decisions.jsonl  summary-table.jsonl
archive/roadmap/: phase-0-foundation.jsonl  phase-1-graph-container.jsonl  phase-2-extra.jsonl  phase-3-resilience-data.jsonl  phase-4-domain-layers.jsonl  phase-5-framework-distribution.jsonl  phase-6-versioning.jsonl  phase-7-polish.jsonl  phase-8-reduction-layer.jsonl  phase-9-harness-sprint.jsonl
benchmarks/: py-baseline.json
docs/: ADAPTER-CONTRACT.md  GRAPHREFLY-SPEC.md  benchmark.md  docs-guidance.md  optimizations.md  roadmap.md  test-guidance.md
examples/: README.md  basic_counter.py
src/graphrefly/: __init__.py
src/graphrefly/compat/: __init__.py  async_utils.py  asyncio_runner.py  trio_runner.py
src/graphrefly/core/: __init__.py  bridge.py  cancellation.py  clock.py  dynamic_node.py  guard.py  meta.py  node.py  node_base.py  protocol.py  runner.py  subgraph_locks.py  sugar.py  timer.py  versioning.py
src/graphrefly/extra/: __init__.py  adapters.py  backoff.py  backpressure.py  cascading_cache.py  checkpoint.py  composite.py  cron.py  data_structures.py  measurement_adapters.py  reactive_block_layout.py  reactive_layout.py  resilience.py  sources.py  tier1.py  tier2.py
src/graphrefly/graph/: __init__.py  codec.py  graph.py  profile.py  sizeof.py
src/graphrefly/integrations/: __init__.py  django.py  fastapi.py
src/graphrefly/patterns/: __init__.py  _internal.py  ai.py  cqrs.py  domain_templates.py  graphspec.py  memory.py  messaging.py  orchestration.py  reduction.py
src/graphrefly/patterns/harness/: __init__.py  bridge.py  loop.py  profile.py  strategy.py  trace.py  types.py
src/graphrefly/patterns/reactive_layout/: __init__.py  measurement_adapters.py  reactive_block_layout.py  reactive_layout.py
tests/: bench_core.py  conftest.py  test_adapter_contract.py  test_adapters_ingest.py  test_adapters_storage.py  test_backpressure.py  test_bridge.py  test_cascading_cache.py  test_concurrency.py  test_core.py  test_django.py  test_domain_templates.py  test_dynamic_node.py  test_edge_cases.py  test_extra_composite.py  test_extra_data_structures.py  test_extra_resilience.py  test_extra_sources.py  test_extra_sources_http.py  test_extra_tier1.py  test_extra_tier2.py  test_fastapi.py  test_graph.py  test_graphspec.py  test_guard.py  test_measurement_adapters.py  test_operator_protocol_matrix.py  test_patterns_ai.py  test_patterns_cqrs.py  test_patterns_harness.py  test_patterns_memory.py  test_patterns_messaging.py  test_patterns_orchestration.py  test_patterns_reduction.py  test_perf_smoke.py  test_protocol.py  test_reactive_block_layout.py  test_reactive_layout.py  test_reduction.py  test_regressions.py  (+4 more)
tests/helpers/: __init__.py  mock_llm.py
website/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  py-api-sidebar.mjs  theme-prototypes.html  tsconfig.json
website/public/: llms.txt
website/scripts/: gen_api_docs.py  sync-docs.mjs
website/src/components/: GraphreflyHero.astro  Header.astro  MobileMenuFooter.astro  PyodidePlayground.tsx  Sidebar.astro  SiteTitle.astro
website/src/content/docs/: index.mdx
website/src/content/docs/api/: BackoffPreset.md  BackoffStrategy.md  CheckpointAdapter.md  CircuitBreaker.md  CircuitOpenError.md  CompactEntry.md  DeferWhen.md  DictCheckpointAdapter.md  DistillBundle.md  DownStrategy.md  Extraction.md  FileCheckpointAdapter.md  HttpBundle.md  JitterMode.md  MemoryCheckpointAdapter.md  Message.md  MessageType.md  Messages.md  NodeActions.md  NodeFn.md  NodeImpl.md  NodeStatus.md  PipeOperator.md  PubSubHub.md  ReactiveCounterBundle.md  ReactiveIndexBundle.md  ReactiveListBundle.md  ReactiveLogBundle.md  ReactiveMapBundle.md  SqliteCheckpointAdapter.md  SubscribeHints.md  TimeoutError.md  TokenBucket.md  VerifiableBundle.md  Versioned.md  WithBreakerBundle.md  WithStatusBundle.md  audit.md  batch.md  buffer.md  (+118 more)
website/src/content/docs/lab/: python.mdx
website/src/content/docs/recipes/: index.md
website/src/styles/: custom.css
